turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:2: error: Missing closing brace `}' assumed here
var n:Int=0
^LangtonsAnt:3: error: expected class or object definition
def step(rule:Array[Char], colors:Array[Color]) {
^